--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en" data-framework="angularjs">
+<html data-ng-app="ng-typist" lang="en" data-framework="angularjs">
 	<head>
 		<meta charset="utf-8">
 		<title>AngularJS • Typist</title>
+		<script src="node_modules/angular/angular.min.js"></script>
+		<script src="node_modules/malarkey/dist/malarkey.min.js"></script>
 	</head>
-	<body>
-		<div ng-app="todomvc">
-			<ng-view />
-		</div>
-      <script src="/dist/app.js"></script>
+	<body data-ng-controller='mainController as mc'>
+		<h1>
+			<typist data-config='mc.typistConfig'></typist>
+		</h1>
+		<script src="src/app.js"></script>
+		<script src="src/app.controller.js"></script>
 	</body>
 </html>
