Fixed a build bug

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="node_modules/malarkey/dist/malarkey.min.js"></script>
 	</head>
 	<body data-ng-controller='mainController as mc'>
+		<h2>ng-typist</h2>
 		<h1>
 			<typist data-config='mc.typistConfig'></typist>
 		</h1>
