--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html data-ng-app="ng-typist" lang="en" data-framework="angularjs">
+<html data-ng-app="app" lang="en" data-framework="angularjs">
 	<head>
 		<meta charset="utf-8">
 		<title>AngularJS • Typist</title>
 		<script src="node_modules/angular/angular.min.js"></script>
-		<script src="node_modules/malarkey/dist/malarkey.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	</head>
 	<body data-ng-controller='mainController as mc' class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
 		<h2>ng-typist</h2>
+		<hr/>
 		<h1>
 			<typist data-config='mc.typistConfig'></typist>
 		</h1>
-		<script src="src/app.js"></script>
-		<script src="src/app.controller.js"></script>
+		<script src="src/index.js"></script>
+		<script src="dist/app.js"></script>
 	</body>
 </html>
